# hack-the-law-cambridge-2026

./: .gitignore  .mcp.json  README.md  STATE.md  justfile
.claude/: CLAUDE.md
.claude/handoffs/: auth-supabase-jwt.md  citation-retrieval.md  citator-endpoints.md  citator-pipeline-scope.md  citemeright-ui.md  courtlistener-mcp.md  db-dump-loader.md  feature-model-routing.md  prod-backend-foundation.md  retrieval-ingestion-contract.md  vertex-models.md
.github/workflows/: ci.yml
app/: .dockerignore  .env.local.example  .gcloudignore  Dockerfile  README.md  alembic.ini  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 0001_init.py  0002_citator.py
app/scripts/: classify_citator.py  ingest_citator.py  load_dump.py  scrape_scotus_grants.py
app/src/htl/: correlation.py  errors.py  logging_config.py  main.py  settings.py
app/src/htl/auth/: interface.py  stub.py  supabase.py
app/src/htl/citator/: __init__.py  certwatch.py  cl_client.py  courts.py  evolution.py  golden.py  golden_analysis.py  propositions.py  propositions_mock.py  retrieval.py  risk.py  triage.py  verdict.py
app/src/htl/db/: __init__.py  base.py  citator.py  engine.py  models.py  repositories.py
app/src/htl/llm/: analyze.py  classify.py  router.py  usemap.py  vertex.py
app/src/htl/models/: api.py
app/src/htl/routes/: analyze.py  ask.py  chat.py  citations.py  classify.py  dependencies.py  graph.py  inspect.py  propositions.py  resolve.py  risk.py  triage.py  verdict.py
app/tests/: conftest.py  test_analyze.py  test_ask.py  test_auth.py  test_chat.py  test_cl_client.py  test_classify.py  test_correlation.py  test_courts.py  test_db.py  test_evolution.py  test_graph.py  test_ingest_citator.py  test_resolve.py  test_retrieval.py  test_risk.py  test_router.py  test_triage.py  test_verdict.py
data/scotus/: ot2025-granted.json  ot2026-granted.json
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: account-menu.tsx  (+7 more)
infra/: README.md  bootstrap.sh  deploy.sh  env.sh
supabase/: config.toml
(+22 files in other folders)
