[project]
name = "htl-api"
version = "0.1.0"
description = "Hack the Law Cambridge 2026 — legal chatbot API (FastAPI + Gemini on Vertex AI)"
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "pydantic-settings>=2.6,<3.0",
    # Gemini via Vertex AI — auth is GCP ADC, no API key. Async via client.aio.
    "google-genai>=1.0,<2.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "ruff>=0.8,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/htl"]

[tool.pytest.ini_options]
pythonpath = ["src"]
